# smart-door

./: .gitignore  README.md  remove-secret.sh
cad/: arm.scad  button.scad  housing.scad
ios/door/: ContentView.swift  Date+iso.swift  DoorView.swift  Redis.swift  doorApp.swift
ios/door.xcodeproj/: project.pbxproj
ios/door.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/door/Assets.xcassets/floor.imageset/: Contents.json
pico/: clock.py  config_manager.py  dist.py  door.py  hinge_manager.py  main.py  redis.py
pico-c/: .gitignore  CMakeLists.txt  build.sh  echo.py
pico-c/src/: config_manager.cpp  config_manager.hpp  data_buffer.cpp  data_buffer.hpp  distance.cpp  distance.hpp  door.cpp  door.hpp  door_state.cpp  door_state.hpp  hinge_manager.cpp  hinge_manager.hpp  lwipopts.h  main.cpp  parse_redis_msg.cpp  parse_redis_msg.hpp  reboot.cpp  reboot.hpp  set_secrets.cpp  set_secrets.hpp  sleep.cpp  sleep.hpp  tcp.cpp  tcp.hpp  wifi.cpp  wifi.hpp
py/: door.py  hinge_manager.py  main.py  oder.py  redis.py  secret.py  tmp.scpt  tmp1
webhook/: main.py
webhook/api/: Pipfile  index.py  redis.py  secret.py
